--- a/src/main/resources/templates/viewPost.html
+++ b/src/main/resources/templates/viewPost.html
@@ -43,7 +43,7 @@
           <a class="nav-link" th:href="@{/}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/addpost}">Add Post</a>
+          <a class="nav-link" th:href="@{/addPost}">Add Post</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" th:href="@{/contact}">Contact</a>
@@ -97,9 +97,38 @@
 </div>
 
 <h1 th:align="center">Add comment</h1>
-<form th:action="@{'/addComment/ + ${post.getId()} + '/1'}" th:object="${comment}" th:method="post">
-<input type="text" th:field="*{message}" placeholder="input your opinion" required>
-  <input type="submit" value="send">
+<article>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-10 mx-auto">
+        <form th:align="center"
+              th:action="@{'/addComment/' + ${post.getId()} + '/1'}"
+              th:object="${comment}"
+              th:method="post"
+              name="sentMessage" id="contactForm" novalidate>
+          <div class="control-group">
+            <div class="form-group floating-label-form-group controls">
+              <input th:align="center" type="text"
+                     th:field="*{message}"
+                     class="form-control"
+                     placeholder="input your comment"
+                     id="name"
+                     required data-validation-required-message="Please input your message">
+              <br>
+            </div>
+          </div>
+          <div class="form-group">
+            <button type="submit"
+                    class="btn btn-primary"
+                    id="sendMessageButton">
+              send
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</article>
 
 <!-- Footer -->
 <footer>
